# rasterization-renderer

./: CMakeLists.txt
Renderer/: CMakeLists.txt
Renderer/include/Core/: Base.hpp  Bresenham.hpp  CohenSutherland.hpp  Math.hpp  Window.hpp
Renderer/include/Platform/: CPU_Renderer.hpp  WindowsWindow.hpp
Renderer/include/Runtime/: Application.hpp  Buffer.hpp  FrameBuffer.hpp  Layer.hpp  LayerStack.hpp  Renderer.hpp  RendererInstance.hpp  Window.hpp
Renderer/src/: Application.cpp  Renderer.cpp
Renderer/src/Platform/: CPU_Renderer.cpp  WindowsWindow.cpp
Renderer/src/Runtime/: Application.cpp  Buffer.cpp  FrameBuffer.cpp  Layer.cpp  LayerStack.cpp  Renderer.cpp  RendererInstance.cpp  Window.cpp
Sandbox/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp
